createTeam screen is working...

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "buffer": "^6.0.3",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-confirmation-code-field": "^6.5.1",
@@ -48,6 +49,7 @@
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-switch-pro": "https://github.com/redspider926/react-native-switch-pro.git",
     "react-native-toast-message": "^1.4.9",
+    "react-native-uuid": "^1.4.9",
     "react-navigation-backhandler": "^2.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
